--- a/node/package.json
+++ b/node/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "body-parser": "^1.18.3",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "nodemon": "^1.18.9",
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.8",
     "multer": "^1.4.1",
-    "mongoose": "^5.4.8"
+    "nodemon": "^1.18.9"
   },
   "devDependencies": {},
   "scripts": {
